@@ -1,6 +1,6 @@
 % File src/library/base/man/scale.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2014 R Core Team
+% Copyright 1995-2018 R Core Team
 % Distributed under GPL 2 or later
 
 \name{scale}
@@ -16,9 +16,11 @@ scale(x, center = TRUE, scale = TRUE)
 }
 \arguments{
   \item{x}{a numeric matrix(like object).}
-  \item{center}{either a logical value or a numeric vector of length
-    equal to the number of columns of \code{x}.}
-  \item{scale}{either a logical value or a numeric vector of length
+  \item{center}{either a logical value or numeric-alike vector of length
+    equal to the number of columns of \code{x}, where
+    \sQuote{numeric-alike} means that \code{\link{as.numeric}(.)} will
+    be applied successfully if \code{\link{is.numeric}(.)} is not true.}
+  \item{scale}{either a logical value or a numeric-alike vector of length
     equal to the number of columns of \code{x}.}
 }
 \value{
@@ -28,7 +30,7 @@ scale(x, center = TRUE, scale = TRUE)
 }
 \details{
   The value of \code{center} determines how column centering is
-  performed.  If \code{center} is a numeric vector with length equal to
+  performed.  If \code{center} is a numeric-alike vector with length equal to
   the number of columns of \code{x}, then each column of \code{x} has
   the corresponding value from \code{center} subtracted from it.  If
   \code{center} is \code{TRUE} then centering is done by subtracting the
@@ -37,7 +39,7 @@ scale(x, center = TRUE, scale = TRUE)
   centering is done.
 
   The value of \code{scale} determines how column scaling is performed
-  (after centering).  If \code{scale} is a numeric vector with length
+  (after centering).  If \code{scale} is a numeric-alike vector with length
   equal to the number of columns of \code{x}, then each column of
   \code{x} is divided by the corresponding value from \code{scale}.
   If \code{scale} is \code{TRUE} then scaling is done by dividing the
